--- a/src/manifest.json
+++ b/src/manifest.json
@@ -16,5 +16,12 @@
     "persistent": false,
     "scripts": ["background.js"]
   },
-  "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'"
+  "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'",
+  "browser_action": {
+    "default_icon": {               
+      "128": "icon128.png"
+    },
+    "default_title": "Tab Close Gold",
+    "default_popup": "popup.html"   
+  }
 }
