--- a/src/package.json
+++ b/src/package.json
@@ -2,8 +2,10 @@
   "scripts": {
     "build:watch": "run-p watch:tsc watch:webpack",
     "build": "tsc && npx webpack --mode development",
+    "build:prod": "tsc && npx webpack --mode production",
     "watch:tsc": "tsc --watch",
-    "watch:webpack": "npx webpack watch --mode development"
+    "watch:webpack": "npx webpack watch --mode development",
+    "publish": "npm run build:prod && node publish.js"
   },
   "dependencies": {
     "lz-string": "^1.4.4",
