--- a/src/manifest.json
+++ b/src/manifest.json
@@ -7,7 +7,7 @@
 	  "storage"
   ],
   "options_page": "./options.html",
-  "description": "Tired of ads passing by your ad blocker? Zoom meeting launch tabs annoying you? Want a simple extension that will auto close tabs? Then look no further!",
+  "description": "Tired of ads passing by your ad blocker? Zoom tabs annoying you? Want a simple extension to auto close tabs? Then look no further!",
   "icons": {
     "128": "icon128.png"
   },
