--- a/src/package.json
+++ b/src/package.json
@@ -2,7 +2,7 @@
   "scripts": {
     "build:watch": "run-p watch:tsc watch:webpack",
     "build": "tsc && npx webpack --mode development",
-    "build:prod": "tsc --noEmit && npx webpack --no-devtool --mode production",
+    "build:prod": "tsc && npx webpack --no-devtool --mode production",
     "watch:tsc": "tsc --watch",
     "watch:webpack": "npx webpack watch --mode development",
     "publish": "npm run build:prod && node publish.js"
@@ -12,11 +12,12 @@
     "slickgrid": "2.4.44"
   },
   "devDependencies": {
-    "@types/chrome": "^0.0.180",
     "@types/lz-string": "^1.3.34",
     "@types/slickgrid": "^2.1.32",
+    "@types/webextension-polyfill": "^0.8.3",
     "npm-run-all": "^4.1.5",
     "typescript": "^4.6.3",
+    "webextension-polyfill": "^0.9.0",
     "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2"
   }
