add session storage type

--- a/src/manifest.firefox.json
+++ b/src/manifest.firefox.json
@@ -1,7 +1,7 @@
 {
     "manifest_version": 3,
     "name": "Tab Close Gold",
-    "version": "2.2.1.0",
+    "version": "2.3.0.0",
     "permissions": [
       "tabs",
       "storage"
@@ -10,7 +10,7 @@
         "page": "options.html",
         "open_in_tab": true
     },
-    "description": "Tired of ads passing by your ad blocker? Zoom tabs annoying you? Want a simple extension to auto close tabs? Then look no further!",
+    "description": "Tired of ads passing by your ad blocker? Leftover Zoom tabs got you down? Want a simple extension to auto close tabs? Then look no further!",
     "icons": {
       "128": "icon128.png"
     },
