--- a/src/package.json
+++ b/src/package.json
@@ -9,6 +9,7 @@
     "publish-debug": "npm run build && node publish.js"
   },
   "dependencies": {
+    "async-mutex": "^0.4.0",
     "lz-string": "^1.5.0",
     "slickgrid": "2.4.45"
   },
@@ -16,10 +17,10 @@
     "@types/slickgrid": "^2.1.36",
     "@types/webextension-polyfill": "^0.10.3",
     "npm-run-all": "^4.1.5",
+    "source-map-loader": "^4.0.1",
     "typescript": "^5.2.2",
     "webextension-polyfill": "^0.10.0",
     "webpack": "^5.88.2",
-    "webpack-cli": "^5.1.4",
-    "source-map-loader": "^4.0.1"
+    "webpack-cli": "^5.1.4"
   }
 }
