shorten manifest description because "google"

--- a/src/manifest.firefox.json
+++ b/src/manifest.firefox.json
@@ -10,7 +10,7 @@
     "page": "options.html",
     "open_in_tab": true
   },
-  "description": "Tired of ads passing by your ad blocker? Leftover Zoom tabs got you down? Want a simple extension to auto close tabs? Then look no further!",
+  "description": "Tired of unwanted popups? Leftover Zoom tabs got you down? Want a simple extension to auto close tabs? Then look no further!",
   "icons": {
     "128": "icon128.png"
   },
